--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,76 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.2'
-	id 'io.spring.dependency-management' version '1.1.2'
+	id 'io.spring.dependency-management' version "1.1.0"
+	id 'org.springframework.boot' version '3.0.1'
+	id 'pl.allegro.tech.build.axion-release' version '1.14.3'
+	id 'com.palantir.docker' version '0.34.0'
+	id 'com.palantir.docker-run' version '0.34.0'
 }
 
-group = 'com'
-version = '0.0.1-SNAPSHOT'
-
-java {
-	sourceCompatibility = '19'
-}
+version = scmVersion.version
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
+}
+
+String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'yashwanth01'
+String imageName = "${dockerHubUsernameProperty}/entity-management-service:$version"
+
+docker {
+	name imageName
+	files "build/libs/${bootJar.archiveFileName.get()}"
+	buildArgs([JAR_FILE: bootJar.archiveFileName.get()])
+}
+
+dockerRun {
+	name project.name
+	image imageName
+	ports '8080:8080'
+	clean true
+}
+
+//aws {
+//	region = findProperty('region') ?: 'us-east-1'
+//}
+//
+//cloudFormation {
+//	stackName "$project.name-stack"
+//	stackParams([
+//			SubnetID: findProperty('subnetId') ?: '',
+//			ServiceName: project.name,
+//			ServiceVersion: project.version,
+//			DockerHubUsername: dockerHubUsernameProperty
+//	])
+//	templateFile project.file("ecs.yml")
+//}
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(19)
+	}
+}
+
+task('doStuff', type: Copy) {
+	println 'congiguring task'
+	doFirst {
+		println 'running task'
+	}
 }
