--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,23 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+  security:
+    oauth2:
+      client:
+        resourceserver:
+          jwt:
+            issuer-uri: http://localhost:7075/realms/external
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:7075/realms/external
+            user-name-attribute: preferred_username
+        registration:
+          keycloak:
+            client-name: external-client
+            client-id: external-client
+            client-secret: ubTg2FYB7AH724Cnzn2vq64BdGIAXuOX
+            scope: openid
+            authorization-grant-type: authorization_code
 
 kafka:
   bootstrap-servers: localhost:9092
@@ -39,6 +56,20 @@ kafka:
   enabled: false
   max-replay-count: 2
 
+ams:
+  security:
+    enabled: true
+
+jwt:
+  auth:
+    converter:
+      resource-id: external-client
+      principal-attribute: preferred_username
+
+#      use-pkce-with-authorization-code-grant: true
+#  oAuthFlow:
+#    authorizationUrl: http://localhost:7075/realms/external/protocol/openid-connect/auth
+#    tokenUrl: http://localhost:7075/realms/external/protocol/openid-connect/token
 
 logging:
   level:
